--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -1,14 +1,19 @@
-<style>
+  <style>
   dt {
     font-weight: bold;
   }
 </style>
+<head>
+  <meta charset="utf-8">
+
+  <title>Thanks for using Better Subscriptions for YouTube&trade;!</title>
+</head>
 
 <h1>Thanks for using Better Subscriptions for YouTube&trade;!</h1>
 
 <p>
   I hope you like this extension. Feel free to reach out to me on Twitter <a href="https://twitter.com/Osa_Soft">@Osa_Soft</a>
-  or if you find any bugs or have a cool idea for new feature, let me know on the extension's <a
+  or if you find any bugs or have a cool idea for a new feature, let me know on the extension's <a
   href="https://github.com/OsaSoft/youtube-better-subscriptions/">GitHub page</a>!
 </p>
 
@@ -56,7 +61,7 @@
   <dt>v0.7</dt>
   <dd>Plugin now activates on all YT pages and depending on location decides what to do</dd>
   <dd>Moved buttons to top bar</dd>
-  <dd>Switched to new, more concise versioning scheme: &lt;major&gt;.&lt;minor&gt;&lt;hotfix&gt;, where hotfix version is omitted when 0</dd>
+  <dd>Switched to new, more concise versioning scheme: &lt;major&gt;.&lt;minor&gt;.&lt;hotfix&gt;, where hotfix version is omitted when 0</dd>
 
   <dt>v0.6.1</dt>
   <dd>Mark all as watched button added</dd>
