--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,10 +22,10 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.11?</h2>
+<h2>What's new in version 0.12?</h2>
 <ul>
-  <li>Added changelog page that opens when extension updates</li>
-  <li>Fixed bug where extension would not active properly on pages in some cases (<a href="https://github.com/OsaSoft/youtube-better-subscriptions/issues/56">#56</a>)</li>
+  <li>Replaced Hide Watched checkbox with prettier, YouTube&trade; style toggle button</li>
+  <li>Added settings page. It's empty for now, but feel free to check it out!</li>
 </ul>
 
 <h2>Want to help?</h2>
@@ -38,6 +38,10 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.12</dt>
+  <dd>Replaced Hide Watched checkbox with prettier, YouTube&trade; style toggle button</dd>
+  <dd>Added settings page. Empty for now.</dd>
+
   <dt>v0.11</dt>
   <dd>Added changelog page that opens when extension updates</dd>
   <dd>Fixed bug where extension would not active properly on pages in some cases (<a href="https://github.com/OsaSoft/youtube-better-subscriptions/issues/56">#56</a>)</dd>
