Fixed watched not being tagged on page load

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,10 +22,12 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.12?</h2>
+<h2>What's new in version 0.12.1?</h2>
 <ul>
   <li>Replaced Hide Watched checkbox with prettier, YouTube&trade; style toggle button</li>
   <li>Added settings page. It's empty for now, but feel free to check it out!</li>
+
+  <li>Hotfix .1 - Fixed watched videos not getting properly tagged at first</li>
 </ul>
 
 <h2>Want to help?</h2>
