--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -1,12 +1,64 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Coming Soon!</title>
+  <title>Settings for Better Subscriptions for YouTube&trade;</title>
+
+  <link rel="stylesheet" type="text/css" href="../../common.css"/>
+
+  <script src="../../common.js"></script>
+  <script src="../../util.js"></script>
   <script src="settings.js"></script>
 </head>
 
-<h1>Settings for Better Subscriptions for YouTube&trade; are coming soon!</h1>
+<h1>Settings for Better Subscriptions for YouTube&trade;</h1>
 
-<h2>Thanks for checking this work in progress settings page out! For now, there's not much here, but more will be added in the future!</h2>
+<h2>Subscriptions Feed</h2>
 
+<div class="sk-circle">
+  <div class="sk-circle1 sk-child"></div>
+  <div class="sk-circle2 sk-child"></div>
+  <div class="sk-circle3 sk-child"></div>
+  <div class="sk-circle4 sk-child"></div>
+  <div class="sk-circle5 sk-child"></div>
+  <div class="sk-circle6 sk-child"></div>
+  <div class="sk-circle7 sk-child"></div>
+  <div class="sk-circle8 sk-child"></div>
+  <div class="sk-circle9 sk-child"></div>
+  <div class="sk-circle10 sk-child"></div>
+  <div class="sk-circle11 sk-child"></div>
+  <div class="sk-circle12 sk-child"></div>
+</div>
 
+<div id="settings-subscriptions" class="hidden">
+  <form>
+    <label for="settings.hide.watched.label">Show Hide Watched label</label>
+    <input id="settings.hide.watched.label" type="checkbox"/>
+    <label for="settings.hide.watched.default">Hide watched default state</label>
+    <input id="settings.hide.watched.default" type="checkbox"/>
+  </form>
+  <br/>
+  More settings to come soon!
+</div>
+
+<h2>Other settings</h2>
+
+<div class="sk-circle">
+  <div class="sk-circle1 sk-child"></div>
+  <div class="sk-circle2 sk-child"></div>
+  <div class="sk-circle3 sk-child"></div>
+  <div class="sk-circle4 sk-child"></div>
+  <div class="sk-circle5 sk-child"></div>
+  <div class="sk-circle6 sk-child"></div>
+  <div class="sk-circle7 sk-child"></div>
+  <div class="sk-circle8 sk-child"></div>
+  <div class="sk-circle9 sk-child"></div>
+  <div class="sk-circle10 sk-child"></div>
+  <div class="sk-circle11 sk-child"></div>
+  <div class="sk-circle12 sk-child"></div>
+</div>
+
+<div id="settings-other" class="hidden">
+  More settings to come soon!
+</div>
+
+<button id="settings-save" onclick="saveSettings">Save Settings</button>
