Watched import/export/clear

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -44,7 +44,30 @@
   More settings to come soon!
 </div>
 
-<h2>Other settings</h2>
+<!--<h2>Other settings</h2>-->
+
+<!--<div class="sk-circle">-->
+<!--  <div class="sk-circle1 sk-child"></div>-->
+<!--  <div class="sk-circle2 sk-child"></div>-->
+<!--  <div class="sk-circle3 sk-child"></div>-->
+<!--  <div class="sk-circle4 sk-child"></div>-->
+<!--  <div class="sk-circle5 sk-child"></div>-->
+<!--  <div class="sk-circle6 sk-child"></div>-->
+<!--  <div class="sk-circle7 sk-child"></div>-->
+<!--  <div class="sk-circle8 sk-child"></div>-->
+<!--  <div class="sk-circle9 sk-child"></div>-->
+<!--  <div class="sk-circle10 sk-child"></div>-->
+<!--  <div class="sk-circle11 sk-child"></div>-->
+<!--  <div class="sk-circle12 sk-child"></div>-->
+<!--</div>-->
+
+<!--<div id="settings-other" class="hidden">-->
+<!--  More settings to come soon!-->
+<!--</div>-->
+
+<button id="settings-save">Save Settings</button>
+
+<h2>Watched videos list actions</h2>
 
 <div class="sk-circle">
   <div class="sk-circle1 sk-child"></div>
@@ -61,8 +84,17 @@
   <div class="sk-circle12 sk-child"></div>
 </div>
 
-<div id="settings-other" class="hidden">
-  More settings to come soon!
+<div id="settings-watched-manipulation" class="hidden">
+  <button id="watched.export">Export watched videos</button><br/>
+  <button id="watched.import">Import watched videos</button>
+  <input id="watched.import.file" type="file"/><br/>
+  <br/>
+  <button id="watched.clear">Clear watched videos</button>
 </div>
 
-<button id="settings-save">Save Settings</button>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<h4>Have a suggestion what else could go into the settings page or overall improve the addon? Something doesn't work as it should? Please feel free to raise an issue on <a href="https://github.com/OsaSoft/youtube-better-subscriptions/issues">GitHub</a></h4>
