--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -40,6 +40,11 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>unreleased</dt>
+  <dd>Added basic functionality to the settings page. Now supports saving and loading of configuration.</dd>
+  <dd>Added basic configuration for subs feed to settings page.</dd>
+  <dd>Added watched list export/import/clearing to seetings page.</dd>
+
   <dt>v0.12</dt>
   <dd>Replaced Hide Watched checkbox with prettier, YouTube&trade; style toggle button</dd>
   <dd>Added settings page. Empty for now.</dd>
