Log settings, settings loaded callbacks

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="../../common.css"/>
 
   <script src="../../common.js"></script>
+  <script src="../../settingsLoader.js"></script>
   <script src="../../util.js"></script>
   <script src="settings.js"></script>
 </head>
@@ -42,6 +43,30 @@
   </form>
   <br/>
   More settings to come soon!
+</div>
+
+<h2>General settings</h2>
+
+<div class="sk-circle">
+  <div class="sk-circle1 sk-child"></div>
+  <div class="sk-circle2 sk-child"></div>
+  <div class="sk-circle3 sk-child"></div>
+  <div class="sk-circle4 sk-child"></div>
+  <div class="sk-circle5 sk-child"></div>
+  <div class="sk-circle6 sk-child"></div>
+  <div class="sk-circle7 sk-child"></div>
+  <div class="sk-circle8 sk-child"></div>
+  <div class="sk-circle9 sk-child"></div>
+  <div class="sk-circle10 sk-child"></div>
+  <div class="sk-circle11 sk-child"></div>
+  <div class="sk-circle12 sk-child"></div>
+</div>
+
+<div id="settings-general" class="hidden">
+  <form>
+    <label for="settings.log.enabled">Enable logging</label>
+    <input id="settings.log.enabled" type="checkbox"/><br/>
+  </form>
 </div>
 
 <!--<h2>Other settings</h2>-->
