Update version, release notes

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,17 +22,9 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.13?</h2>
+<h2>What's new in version 0.13.1?</h2>
 <ul>
-  <li>Big changes! Both under and above the hood!</li>
-  <li>Settings page is now functional! Take a look
-    <a href="settings/settings.html">HERE</a> or use the new button in the
-    subs page UI
-  </li>
-  <li>Added basic functionality to the settings page. Now supports saving and loading of configuration.</li>
-  <li>Added basic configuration for subs feed to settings page.</li>
-  <li>Added watched list export/import/clearing to seetings page.</li>
-  <li>Added settings menu to subs page UI</li>
+  <li>This version fixes YouTube's slight change to their DOM layout in a recent update, which caused the extension to stop working.</li>
 </ul>
 
 <h2>Want to help?</h2>
