--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -13,6 +13,30 @@
 
 <h1>Settings for Better Subscriptions for YouTube&trade;</h1>
 
+<h2>Support pages</h2>
+
+<div class="sk-circle">
+  <div class="sk-circle1 sk-child"></div>
+  <div class="sk-circle2 sk-child"></div>
+  <div class="sk-circle3 sk-child"></div>
+  <div class="sk-circle4 sk-child"></div>
+  <div class="sk-circle5 sk-child"></div>
+  <div class="sk-circle6 sk-child"></div>
+  <div class="sk-circle7 sk-child"></div>
+  <div class="sk-circle8 sk-child"></div>
+  <div class="sk-circle9 sk-child"></div>
+  <div class="sk-circle10 sk-child"></div>
+  <div class="sk-circle11 sk-child"></div>
+  <div class="sk-circle12 sk-child"></div>
+</div>
+
+<div id="settings-support-pages" class="hidden">
+  <form>
+    <label for="settings.hide.watched.support.channel">Enable extension for channel videos page</label>
+    <input id="settings.hide.watched.support.channel" type="checkbox"/><br/>
+  </form>
+</div>
+
 <h2>Subscriptions Feed</h2>
 
 <div class="sk-circle">
