Added settings option to keep state of Hide Watched checkbox (while you are not reloading the page)

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -62,6 +62,9 @@
     <label for="settings.hide.watched.default">Hide watched default state</label>
     <input id="settings.hide.watched.default" type="checkbox"/><br/>
 
+    <label for="settings.hide.watched.keep.state">Keep the state of Hide Watched checkbox (while you are not reloading the page)</label>
+    <input id="settings.hide.watched.keep.state" type="checkbox"/><br/>
+
     <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
     <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
   </form>
