Added settings option to set video as watched when you click on it.

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -91,6 +91,9 @@
 
 <div id="settings-general" class="hidden">
   <form>
+    <label for="settings.hide.watched.auto.store">Set video as watched when you click on it.</label>
+    <input id="settings.hide.watched.auto.store" type="checkbox"/><br/>
+
     <label for="settings.log.enabled">Enable logging</label>
     <input id="settings.log.enabled" type="checkbox"/><br/>
   </form>
