--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -59,6 +59,9 @@
     <label for="settings.hide.watched.label">Show Hide Watched label</label>
     <input id="settings.hide.watched.label" type="checkbox"/><br/>
 
+    <label for="settings.hide.watched.all.label">Show Mark All As Watched label</label>
+    <input id="settings.hide.watched.all.label" type="checkbox"/><br/>
+
     <label for="settings.hide.watched.default">Hide watched default state</label>
     <input id="settings.hide.watched.default" type="checkbox"/><br/>
 
