--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -4,155 +4,165 @@
   <title>Settings for Better Subscriptions for YouTube&trade;</title>
 
   <link rel="stylesheet" type="text/css" href="../../common.css"/>
+  <link rel="stylesheet" type="text/css" href="settings.css"/>
 
   <script src="../../common.js"></script>
   <script src="../../settingsLoader.js"></script>
   <script src="../../util.js"></script>
   <script src="settings.js"></script>
 </head>
+<body>
+<div class="settings__container">
+  <h1>Settings for Better Subscriptions for YouTube&trade;</h1>
 
-<h1>Settings for Better Subscriptions for YouTube&trade;</h1>
+  <h2>Support pages</h2>
 
-<h2>Support pages</h2>
+  <div class="sk-circle">
+    <div class="sk-circle1 sk-child"></div>
+    <div class="sk-circle2 sk-child"></div>
+    <div class="sk-circle3 sk-child"></div>
+    <div class="sk-circle4 sk-child"></div>
+    <div class="sk-circle5 sk-child"></div>
+    <div class="sk-circle6 sk-child"></div>
+    <div class="sk-circle7 sk-child"></div>
+    <div class="sk-circle8 sk-child"></div>
+    <div class="sk-circle9 sk-child"></div>
+    <div class="sk-circle10 sk-child"></div>
+    <div class="sk-circle11 sk-child"></div>
+    <div class="sk-circle12 sk-child"></div>
+  </div>
 
-<div class="sk-circle">
-  <div class="sk-circle1 sk-child"></div>
-  <div class="sk-circle2 sk-child"></div>
-  <div class="sk-circle3 sk-child"></div>
-  <div class="sk-circle4 sk-child"></div>
-  <div class="sk-circle5 sk-child"></div>
-  <div class="sk-circle6 sk-child"></div>
-  <div class="sk-circle7 sk-child"></div>
-  <div class="sk-circle8 sk-child"></div>
-  <div class="sk-circle9 sk-child"></div>
-  <div class="sk-circle10 sk-child"></div>
-  <div class="sk-circle11 sk-child"></div>
-  <div class="sk-circle12 sk-child"></div>
-</div>
+  <div id="settings-support-pages" class="hidden">
+    <form>
+      <input id="settings.hide.watched.support.channel" type="checkbox"/>
+      <label for="settings.hide.watched.support.channel">Enable extension for channel videos page</label>
+    </form>
+  </div>
 
-<div id="settings-support-pages" class="hidden">
-  <form>
-    <label for="settings.hide.watched.support.channel">Enable extension for channel videos page</label>
-    <input id="settings.hide.watched.support.channel" type="checkbox"/><br/>
-  </form>
-</div>
+  <h2>Subscriptions Feed</h2>
 
-<h2>Subscriptions Feed</h2>
+  <div class="sk-circle">
+    <div class="sk-circle1 sk-child"></div>
+    <div class="sk-circle2 sk-child"></div>
+    <div class="sk-circle3 sk-child"></div>
+    <div class="sk-circle4 sk-child"></div>
+    <div class="sk-circle5 sk-child"></div>
+    <div class="sk-circle6 sk-child"></div>
+    <div class="sk-circle7 sk-child"></div>
+    <div class="sk-circle8 sk-child"></div>
+    <div class="sk-circle9 sk-child"></div>
+    <div class="sk-circle10 sk-child"></div>
+    <div class="sk-circle11 sk-child"></div>
+    <div class="sk-circle12 sk-child"></div>
+  </div>
 
-<div class="sk-circle">
-  <div class="sk-circle1 sk-child"></div>
-  <div class="sk-circle2 sk-child"></div>
-  <div class="sk-circle3 sk-child"></div>
-  <div class="sk-circle4 sk-child"></div>
-  <div class="sk-circle5 sk-child"></div>
-  <div class="sk-circle6 sk-child"></div>
-  <div class="sk-circle7 sk-child"></div>
-  <div class="sk-circle8 sk-child"></div>
-  <div class="sk-circle9 sk-child"></div>
-  <div class="sk-circle10 sk-child"></div>
-  <div class="sk-circle11 sk-child"></div>
-  <div class="sk-circle12 sk-child"></div>
-</div>
+  <div id="settings-subscriptions" class="hidden">
+    <form>
+      <input id="settings.hide.watched.label" type="checkbox"/>
+      <label for="settings.hide.watched.label">Show "Hide Watched" label</label><br/>
 
-<div id="settings-subscriptions" class="hidden">
-  <form>
-    <label for="settings.hide.watched.label">Show Hide Watched label</label>
-    <input id="settings.hide.watched.label" type="checkbox"/><br/>
+      <input id="settings.hide.watched.all.label" type="checkbox"/>
+      <label for="settings.hide.watched.all.label">Show "Mark all as watched" label</label><br/>
+      <br/>
 
-    <label for="settings.hide.watched.all.label">Show Mark All As Watched label</label>
-    <input id="settings.hide.watched.all.label" type="checkbox"/><br/>
+      <input id="settings.hide.watched.default" type="checkbox"/>
+      <label for="settings.hide.watched.default">Hide watched default state</label><br/>
 
-    <label for="settings.hide.watched.default">Hide watched default state</label>
-    <input id="settings.hide.watched.default" type="checkbox"/><br/>
+      <input id="settings.hide.watched.keep.state" type="checkbox"/>
+      <label for="settings.hide.watched.keep.state">Keep the state of "Hide Watched" checkbox (while you are not reloading
+        the page)</label><br/>
+      <br/>
 
-    <label for="settings.hide.watched.keep.state">Keep the state of Hide Watched checkbox (while you are not reloading the page)</label>
-    <input id="settings.hide.watched.keep.state" type="checkbox"/><br/>
+      <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
+      <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
+      <label for="settings.hide.watched.refresh.rate">(currently works only in "hide watched" state)</label>
 
-    <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
-    <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
-  </form>
+    </form>
+  </div>
+
+  <h2>General settings</h2>
+
+  <div class="sk-circle">
+    <div class="sk-circle1 sk-child"></div>
+    <div class="sk-circle2 sk-child"></div>
+    <div class="sk-circle3 sk-child"></div>
+    <div class="sk-circle4 sk-child"></div>
+    <div class="sk-circle5 sk-child"></div>
+    <div class="sk-circle6 sk-child"></div>
+    <div class="sk-circle7 sk-child"></div>
+    <div class="sk-circle8 sk-child"></div>
+    <div class="sk-circle9 sk-child"></div>
+    <div class="sk-circle10 sk-child"></div>
+    <div class="sk-circle11 sk-child"></div>
+    <div class="sk-circle12 sk-child"></div>
+  </div>
+
+  <div id="settings-general" class="hidden">
+    <form>
+      <input id="settings.hide.watched.auto.store" type="checkbox"/>
+      <label for="settings.hide.watched.auto.store">Set video as watched when you click on it.</label><br/>
+
+      <input id="settings.log.enabled" type="checkbox"/>
+      <label for="settings.log.enabled">Enable logging</label><br/>
+    </form>
+  </div>
+
+  <!--<h2>Other settings</h2>-->
+
+  <!--<div class="sk-circle">-->
+  <!--  <div class="sk-circle1 sk-child"></div>-->
+  <!--  <div class="sk-circle2 sk-child"></div>-->
+  <!--  <div class="sk-circle3 sk-child"></div>-->
+  <!--  <div class="sk-circle4 sk-child"></div>-->
+  <!--  <div class="sk-circle5 sk-child"></div>-->
+  <!--  <div class="sk-circle6 sk-child"></div>-->
+  <!--  <div class="sk-circle7 sk-child"></div>-->
+  <!--  <div class="sk-circle8 sk-child"></div>-->
+  <!--  <div class="sk-circle9 sk-child"></div>-->
+  <!--  <div class="sk-circle10 sk-child"></div>-->
+  <!--  <div class="sk-circle11 sk-child"></div>-->
+  <!--  <div class="sk-circle12 sk-child"></div>-->
+  <!--</div>-->
+
+  <!--<div id="settings-other" class="hidden">-->
+  <!--  More settings to come soon!-->
+  <!--</div>-->
+
+  <button id="settings-save">Save Settings</button>
+
+  <h2>Watched videos list actions</h2>
+
+  <div class="sk-circle">
+    <div class="sk-circle1 sk-child"></div>
+    <div class="sk-circle2 sk-child"></div>
+    <div class="sk-circle3 sk-child"></div>
+    <div class="sk-circle4 sk-child"></div>
+    <div class="sk-circle5 sk-child"></div>
+    <div class="sk-circle6 sk-child"></div>
+    <div class="sk-circle7 sk-child"></div>
+    <div class="sk-circle8 sk-child"></div>
+    <div class="sk-circle9 sk-child"></div>
+    <div class="sk-circle10 sk-child"></div>
+    <div class="sk-circle11 sk-child"></div>
+    <div class="sk-circle12 sk-child"></div>
+  </div>
+
+  <div id="settings-watched-manipulation" class="hidden">
+    <button id="watched.export">Export watched videos</button><br/>
+    <br/>
+    <button id="watched.import">Import watched videos</button>
+    <input id="watched.import.file" type="file"/><br/>
+    <br/>
+    <button id="watched.clear">Clear watched videos</button>
+  </div>
+
   <br/>
-  More settings to come soon!
-</div>
-
-<h2>General settings</h2>
-
-<div class="sk-circle">
-  <div class="sk-circle1 sk-child"></div>
-  <div class="sk-circle2 sk-child"></div>
-  <div class="sk-circle3 sk-child"></div>
-  <div class="sk-circle4 sk-child"></div>
-  <div class="sk-circle5 sk-child"></div>
-  <div class="sk-circle6 sk-child"></div>
-  <div class="sk-circle7 sk-child"></div>
-  <div class="sk-circle8 sk-child"></div>
-  <div class="sk-circle9 sk-child"></div>
-  <div class="sk-circle10 sk-child"></div>
-  <div class="sk-circle11 sk-child"></div>
-  <div class="sk-circle12 sk-child"></div>
-</div>
-
-<div id="settings-general" class="hidden">
-  <form>
-    <label for="settings.hide.watched.auto.store">Set video as watched when you click on it.</label>
-    <input id="settings.hide.watched.auto.store" type="checkbox"/><br/>
-
-    <label for="settings.log.enabled">Enable logging</label>
-    <input id="settings.log.enabled" type="checkbox"/><br/>
-  </form>
-</div>
-
-<!--<h2>Other settings</h2>-->
-
-<!--<div class="sk-circle">-->
-<!--  <div class="sk-circle1 sk-child"></div>-->
-<!--  <div class="sk-circle2 sk-child"></div>-->
-<!--  <div class="sk-circle3 sk-child"></div>-->
-<!--  <div class="sk-circle4 sk-child"></div>-->
-<!--  <div class="sk-circle5 sk-child"></div>-->
-<!--  <div class="sk-circle6 sk-child"></div>-->
-<!--  <div class="sk-circle7 sk-child"></div>-->
-<!--  <div class="sk-circle8 sk-child"></div>-->
-<!--  <div class="sk-circle9 sk-child"></div>-->
-<!--  <div class="sk-circle10 sk-child"></div>-->
-<!--  <div class="sk-circle11 sk-child"></div>-->
-<!--  <div class="sk-circle12 sk-child"></div>-->
-<!--</div>-->
-
-<!--<div id="settings-other" class="hidden">-->
-<!--  More settings to come soon!-->
-<!--</div>-->
-
-<button id="settings-save">Save Settings</button>
-
-<h2>Watched videos list actions</h2>
-
-<div class="sk-circle">
-  <div class="sk-circle1 sk-child"></div>
-  <div class="sk-circle2 sk-child"></div>
-  <div class="sk-circle3 sk-child"></div>
-  <div class="sk-circle4 sk-child"></div>
-  <div class="sk-circle5 sk-child"></div>
-  <div class="sk-circle6 sk-child"></div>
-  <div class="sk-circle7 sk-child"></div>
-  <div class="sk-circle8 sk-child"></div>
-  <div class="sk-circle9 sk-child"></div>
-  <div class="sk-circle10 sk-child"></div>
-  <div class="sk-circle11 sk-child"></div>
-  <div class="sk-circle12 sk-child"></div>
-</div>
-
-<div id="settings-watched-manipulation" class="hidden">
-  <button id="watched.export">Export watched videos</button><br/>
-  <button id="watched.import">Import watched videos</button>
-  <input id="watched.import.file" type="file"/><br/>
   <br/>
-  <button id="watched.clear">Clear watched videos</button>
+  <br/>
+  <br/>
+  <br/>
+  <h4>Have a suggestion what else could go into the settings page or overall improve the addon? Something doesn't work
+    as it should? Please feel free to raise an issue on <a
+      href="https://github.com/OsaSoft/youtube-better-subscriptions/issues">GitHub</a></h4>
 </div>
-
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<h4>Have a suggestion what else could go into the settings page or overall improve the addon? Something doesn't work as it should? Please feel free to raise an issue on <a href="https://github.com/OsaSoft/youtube-better-subscriptions/issues">GitHub</a></h4>
+</body>
