Added settings option to stick UI to the right menu

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -63,6 +63,9 @@
 
       <input id="settings.hide.watched.all.label" type="checkbox"/>
       <label for="settings.hide.watched.all.label">Show "Mark all as watched" label</label><br/>
+
+      <input id="settings.hide.watched.ui.stick.right" type="checkbox"/>
+      <label for="settings.hide.watched.ui.stick.right">Stick UI to the right menu</label><br/>
       <br/>
 
       <input id="settings.hide.watched.default" type="checkbox"/>
