Adding features: remove watched videos from homepage and also adding the necessary buttons ui on the webpage

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -21,10 +21,9 @@
   The purpose of this page is to let you know what's changed or new in the extension and it will show up after
   installing or updating the extension to a new version.
 </p>
-
-<h2>What's new in version 0.13.1?</h2>
+<h2>What's new in version 0.14?</h2>
 <ul>
-  <li>This version fixes YouTube's slight change to their DOM layout in a recent update, which caused the extension to stop working.</li>
+  <li>This version adds support for the extension to hide watched videos on the YouTube homepage.</li>
 </ul>
 
 <h2>Want to help?</h2>
@@ -41,6 +40,9 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.13.1</dt>
+  <dd>This version fixes YouTube's slight change to their DOM layout in a recent update, which caused the extension to stop working.</dd>
+
   <dt>v0.13</dt>
   <dd>Added basic functionality to the settings page. Now supports saving and loading of configuration.</dd>
   <dd>Added basic configuration for subs feed to settings page.</dd>
