--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -15,30 +15,6 @@
 <div class="settings__container">
   <h1>Settings for Better Subscriptions for YouTube&trade;</h1>
 
-  <h2>Support pages</h2>
-
-  <div class="sk-circle">
-    <div class="sk-circle1 sk-child"></div>
-    <div class="sk-circle2 sk-child"></div>
-    <div class="sk-circle3 sk-child"></div>
-    <div class="sk-circle4 sk-child"></div>
-    <div class="sk-circle5 sk-child"></div>
-    <div class="sk-circle6 sk-child"></div>
-    <div class="sk-circle7 sk-child"></div>
-    <div class="sk-circle8 sk-child"></div>
-    <div class="sk-circle9 sk-child"></div>
-    <div class="sk-circle10 sk-child"></div>
-    <div class="sk-circle11 sk-child"></div>
-    <div class="sk-circle12 sk-child"></div>
-  </div>
-
-  <div id="settings-support-pages" class="hidden">
-    <form>
-      <input id="settings.hide.watched.support.channel" type="checkbox"/>
-      <label for="settings.hide.watched.support.channel">Enable extension for channel videos page</label>
-    </form>
-  </div>
-
   <h2>Subscriptions Feed</h2>
 
   <div class="sk-circle">
@@ -72,14 +48,41 @@
       <label for="settings.hide.watched.default">Hide watched default state</label><br/>
 
       <input id="settings.hide.watched.keep.state" type="checkbox"/>
-      <label for="settings.hide.watched.keep.state">Keep the state of "Hide Watched" checkbox (while you are not reloading
-        the page)</label><br/>
+      <label for="settings.hide.watched.keep.state">
+        Keep the state of "Hide Watched" checkbox through navigation
+        (allows you to go on video/channel/sub/etc pages and save the state of "Hide Watched" checkbox despite the
+        default value (it will be applied on reload).)
+      </label><br/>
       <br/>
 
       <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
       <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
       <label for="settings.hide.watched.refresh.rate">(currently works only in "hide watched" state)</label>
 
+    </form>
+  </div>
+
+  <h2>Other YouTube&trade; pages</h2>
+
+  <div class="sk-circle">
+    <div class="sk-circle1 sk-child"></div>
+    <div class="sk-circle2 sk-child"></div>
+    <div class="sk-circle3 sk-child"></div>
+    <div class="sk-circle4 sk-child"></div>
+    <div class="sk-circle5 sk-child"></div>
+    <div class="sk-circle6 sk-child"></div>
+    <div class="sk-circle7 sk-child"></div>
+    <div class="sk-circle8 sk-child"></div>
+    <div class="sk-circle9 sk-child"></div>
+    <div class="sk-circle10 sk-child"></div>
+    <div class="sk-circle11 sk-child"></div>
+    <div class="sk-circle12 sk-child"></div>
+  </div>
+
+  <div id="settings-support-pages" class="hidden">
+    <form>
+      <input id="settings.hide.watched.support.channel" type="checkbox"/>
+      <label for="settings.hide.watched.support.channel">Enable extension for channel videos page</label>
     </form>
   </div>
 
@@ -103,7 +106,10 @@
   <div id="settings-general" class="hidden">
     <form>
       <input id="settings.hide.watched.auto.store" type="checkbox"/>
-      <label for="settings.hide.watched.auto.store">Set video as watched when you click on it.</label><br/>
+      <label for="settings.hide.watched.auto.store">
+        Set video as watched when you click on it.
+        (Disabling this means videos are only marked as watched when you click the 'Mark as watched' icon)
+      </label><br/>
 
       <input id="settings.log.enabled" type="checkbox"/>
       <label for="settings.log.enabled">Enable logging</label><br/>
@@ -151,7 +157,8 @@
   </div>
 
   <div id="settings-watched-manipulation" class="hidden">
-    <button id="watched.export">Export watched videos</button><br/>
+    <button id="watched.export">Export watched videos</button>
+    <br/>
     <br/>
     <button id="watched.import">Import watched videos</button>
     <input id="watched.import.file" type="file"/><br/>
