--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -23,7 +23,15 @@
 </p>
 <h2>What's new in version 0.14?</h2>
 <ul>
-  <li>This version adds support for the extension to hide watched videos on the YouTube homepage.</li>
+  <li>Added hiding watched videos on the YouTube homepage.</li>
+  <li>Added hiding watched videos on Channel videos page.</li>
+  <li>Removed using YT's watched status, as its unreliable. Might readd in some form later</li>
+  <li>Added new settings</li>
+  <li>Improved settings page UI</li>
+  <li>Fix sometimes marked videos not displaying correctly</li>
+  <li>Fix icon repeat in ui</li>
+  <li>Fix watched icon</li>
+  <li>Fix issue in Chrome causing inability to clear storage</li>
 </ul>
 
 <h2>Want to help?</h2>
