--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -21,17 +21,9 @@
   The purpose of this page is to let you know what's changed or new in the extension and it will show up after
   installing or updating the extension to a new version.
 </p>
-<h2>What's new in version 0.14?</h2>
+<h2>What's new in version 0.15?</h2>
 <ul>
-  <li>Added hiding watched videos on the YouTube homepage.</li>
-  <li>Added hiding watched videos on Channel videos page.</li>
-  <li>Removed using YT's watched status, as its unreliable. Might readd in some form later</li>
-  <li>Added new settings</li>
-  <li>Improved settings page UI</li>
-  <li>Fix sometimes marked videos not displaying correctly</li>
-  <li>Fix icon repeat in ui</li>
-  <li>Fix watched icon</li>
-  <li>Fix issue in Chrome causing inability to clear storage</li>
+  <li></li>
 </ul>
 
 <h2>Want to help?</h2>
@@ -48,8 +40,24 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.14.1</dt>
+  <dd>Hotfix: Fix missing Mark as watched button</dd>
+
+  <dt>v0.14</dt>
+  <dd>Added hiding watched videos on the YouTube homepage.</dd>
+  <dd>Added hiding watched videos on Channel videos page.</dd>
+  <dd>Removed using YT's watched status, as its unreliable. Might readd in some form later</dd>
+  <dd>Added new settings</dd>
+  <dd>Improved settings page UI</dd>
+  <dd>Fix sometimes marked videos not displaying correctly</dd>
+  <dd>Fix icon repeat in ui</dd>
+  <dd>Fix watched icon</dd>
+  <dd>Fix issue in Chrome causing inability to clear storage</dd>
+
   <dt>v0.13.1</dt>
-  <dd>This version fixes YouTube's slight change to their DOM layout in a recent update, which caused the extension to stop working.</dd>
+  <dd>This version fixes YouTube's slight change to their DOM layout in a recent update, which caused the extension to
+    stop working.
+  </dd>
 
   <dt>v0.13</dt>
   <dd>Added basic functionality to the settings page. Now supports saving and loading of configuration.</dd>
