Added configurable mark as watched by YT progress bar

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -23,7 +23,11 @@
 </p>
 <h2>What's new in version 0.15.0?</h2>
 <ul>
-  <li></li>
+  <li>
+    Reintroduced ability to automatically mark as watched videos marked by YouTube&trade; (using red bar on bottom of thumbnail)<br/>
+    Functionality is OFF by default, can be enabled in settings.
+  </li>
+  <li>Fix: Changelog should now only be shown once per version (not with every browser update)</li>
 </ul>
 
 <h2>Want to help?</h2>
