--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -53,6 +53,12 @@
         (allows you to go on video/channel/sub/etc pages and save the state of "Hide Watched" checkbox despite the
         default value (it will be applied on reload).)
       </label><br/>
+
+      <input id="settings.mark.watched.youtube.watched.percentage" type="checkbox"/> <!--TODO allow percentage selection -->
+      <label for="settings.mark.watched.youtube.watched.percentage">
+        Use YouTube&trade;'s watched gauge (red bar on bottom of thumbnail) to mark as watched.
+        (Unchecking will NOT affect videos already marked using this. Requires sub feed page reload to be applied)
+      </label><br/>
       <br/>
 
       <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
@@ -82,7 +88,9 @@
   <div id="settings-support-pages" class="hidden">
     <form>
       <input id="settings.hide.watched.support.channel" type="checkbox"/>
-      <label for="settings.hide.watched.support.channel">Enable extension for channel videos page</label>
+      <label for="settings.hide.watched.support.channel">Enable extension for channel videos page</label><br/>
+      <input id="settings.hide.watched.support.home" type="checkbox"/>
+      <label for="settings.hide.watched.support.home">Enable extension for YouTube&trade; Homepage (beta)</label>
     </form>
   </div>
 
@@ -115,27 +123,6 @@
       <label for="settings.log.enabled">Enable logging</label><br/>
     </form>
   </div>
-
-  <!--<h2>Other settings</h2>-->
-
-  <!--<div class="sk-circle">-->
-  <!--  <div class="sk-circle1 sk-child"></div>-->
-  <!--  <div class="sk-circle2 sk-child"></div>-->
-  <!--  <div class="sk-circle3 sk-child"></div>-->
-  <!--  <div class="sk-circle4 sk-child"></div>-->
-  <!--  <div class="sk-circle5 sk-child"></div>-->
-  <!--  <div class="sk-circle6 sk-child"></div>-->
-  <!--  <div class="sk-circle7 sk-child"></div>-->
-  <!--  <div class="sk-circle8 sk-child"></div>-->
-  <!--  <div class="sk-circle9 sk-child"></div>-->
-  <!--  <div class="sk-circle10 sk-child"></div>-->
-  <!--  <div class="sk-circle11 sk-child"></div>-->
-  <!--  <div class="sk-circle12 sk-child"></div>-->
-  <!--</div>-->
-
-  <!--<div id="settings-other" class="hidden">-->
-  <!--  More settings to come soon!-->
-  <!--</div>-->
 
   <button id="settings-save">Save Settings</button>
 
