fix: "Use YouTube™'s watched gauge" Settings should now save correctly
Resolves #90

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -28,6 +28,7 @@
     Functionality is OFF by default, can be enabled in settings.
   </li>
   <li>Fix: Changelog should now only be shown once per version (not with every browser update)</li>
+  <li>Fix: "Use YouTube™'s watched gauge" Settings should now correctly save</li>
 </ul>
 
 <h2>Want to help?</h2>
