Changed toggle element to use new YT class
Resolves #99

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -21,14 +21,9 @@
   The purpose of this page is to let you know what's changed or new in the extension and it will show up after
   installing or updating the extension to a new version.
 </p>
-<h2>What's new in version 0.15.0?</h2>
+<h2>What's new in version 0.16.0?</h2>
 <ul>
-  <li>
-    Reintroduced ability to automatically mark as watched videos marked by YouTube&trade; (using red bar on bottom of thumbnail)<br/>
-    Functionality is OFF by default, can be enabled in settings.
-  </li>
-  <li>Fix: Changelog should now only be shown once per version (not with every browser update)</li>
-  <li>Fix: "Use YouTube™'s watched gauge" Settings should now correctly save</li>
+  <li>Mark as Watched toggle is back. Cause for disappearance was YT changing the name of their toggle element.</li>
 </ul>
 
 <h2>Want to help?</h2>
@@ -36,7 +31,7 @@
   with a kind word is enough.</p>
 <p>Other than that, I would appreciate it if you can help spread the word and get the extension out into more people's
   hands.</p>
-<p>For those that would like a more hands on approach to helping, you can always contribute to the source code on <a
+<p>For those that would like a more hands-on approach to helping, you can always contribute to the source code on <a
   href="https://github.com/OsaSoft/youtube-better-subscriptions/">GitHub</a>, and if you can't code, there are some
   non-coding things I'd very much appreciate
   some help with (like prettier UI, screenshots, etc). You can see some of those in the <a
@@ -45,6 +40,15 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.15.2</dt>
+  <dd>Fix: "Use YouTube™'s watched gauge" Settings should now correctly save</dd>
+
+  <dt>v0.15.1</dt>
+  <dd>Fix: Changelog should now only be shown once per version (not with every browser update)</dd>
+
+  <dt>v0.15.0</dt>
+  <dd>Reintroduced ability to automatically mark as watched videos marked by YouTube&trade; (using red bar on bottom of thumbnail)</dd>
+
   <dt>v0.14.1</dt>
   <dd>Hotfix: Fix missing Mark as watched button</dd>
 
