Allow to enable hiding of Premieres
Resolves #68

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -23,6 +23,7 @@
 </p>
 <h2>What's new in version 0.16.0?</h2>
 <ul>
+  <li>Now you can hide premieres until they are available to watch! Enable this feature in the settings.</li>
   <li>Mark as Watched toggle is back. Cause for disappearance was YT changing the name of their toggle element.</li>
 </ul>
 
