--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -54,11 +54,15 @@
         default value (it will be applied on reload).)
       </label><br/>
 
-      <input id="settings.mark.watched.youtube.watched.percentage" type="checkbox"/> <!--TODO allow percentage selection -->
+      <!--TODO allow percentage selection -->
+      <input id="settings.mark.watched.youtube.watched.percentage" type="checkbox"/>
       <label for="settings.mark.watched.youtube.watched.percentage">
         Use YouTube&trade;'s watched gauge (red bar on bottom of thumbnail) to mark as watched.
         (Unchecking will NOT affect videos already marked using this. Requires sub feed page reload to be applied)
       </label><br/>
+
+      <input id="settings.hide.premieres" type="checkbox"/>
+      <label for="settings.hide.premieres">Hide Premieres until they are available to watch</label><br/>
       <br/>
 
       <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
