Fix "hide premieres" settings always overridden by default

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -21,9 +21,12 @@
   The purpose of this page is to let you know what's changed or new in the extension and it will show up after
   installing or updating the extension to a new version.
 </p>
-<h2>What's new in version 0.16.0?</h2>
+<h2>What's new in version 0.16.1?</h2>
 <ul>
   <li>Now you can hide premieres until they are available to watch! Enable this feature in the settings.</li>
+  <ul>
+    <li>Settings value was not properly persisted in 0.16.0. This has been fixed in 0.16.1</li>
+  </ul>
   <li>Mark as Watched toggle is back. Cause for disappearance was YT changing the name of their toggle element.</li>
 </ul>
 
@@ -48,7 +51,9 @@
   <dd>Fix: Changelog should now only be shown once per version (not with every browser update)</dd>
 
   <dt>v0.15.0</dt>
-  <dd>Reintroduced ability to automatically mark as watched videos marked by YouTube&trade; (using red bar on bottom of thumbnail)</dd>
+  <dd>Reintroduced ability to automatically mark as watched videos marked by YouTube&trade; (using red bar on bottom of
+    thumbnail)
+  </dd>
 
   <dt>v0.14.1</dt>
   <dd>Hotfix: Fix missing Mark as watched button</dd>
