Allow to autohide Shorts. Fix settings loading issues.
Resolves #100

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -55,14 +55,17 @@
       </label><br/>
 
       <!--TODO allow percentage selection -->
-      <input id="settings.mark.watched.youtube.watched.percentage" type="checkbox"/>
-      <label for="settings.mark.watched.youtube.watched.percentage">
+      <input id="settings.mark.watched.youtube.watched" type="checkbox"/>
+      <label for="settings.mark.watched.youtube.watched">
         Use YouTube&trade;'s watched gauge (red bar on bottom of thumbnail) to mark as watched.
         (Unchecking will NOT affect videos already marked using this. Requires sub feed page reload to be applied)
       </label><br/>
 
       <input id="settings.hide.premieres" type="checkbox"/>
       <label for="settings.hide.premieres">Hide Premieres until they are available to watch</label><br/>
+
+      <input id="settings.hide.shorts" type="checkbox"/>
+      <label for="settings.hide.shorts">Hide Shorts automatically</label><br/>
       <br/>
 
       <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
