Fix YT update causing broken channels video functionality
Resolves #122

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -21,9 +21,26 @@
   The purpose of this page is to let you know what's changed or new in the extension and it will show up after
   installing or updating the extension to a new version.
 </p>
+
+<h2>What's new in version 0.17.1?</h2>
+<ul>
+  <li>Fixed issue where YT design update caused the detection of videos and therefore hiding them to break on channel
+    video pages.
+  </li>
+  <li>
+    Thank you everyone for your long patience, as I know you've been wanting a fix since November 🙇‍♂️!
+    <br/>It's been frustrating not being able to
+    get around to this sooner, but on the other hand it really warmed my heart to read so many messages from that many
+    people who enjoy
+    and care about this extension enough that much!
+  </li>
+</ul>
+
 <h2>What's new in version 0.17.0?</h2>
 <ul>
-  <li>Now you can auto-hide (mark as watched) Shorts! This behaviour is off by default, so you'll have to turn it on in the settings page.</li>
+  <li>Now you can auto-hide (mark as watched) Shorts! This behaviour is off by default, so you'll have to turn it on in
+    the settings page.
+  </li>
   <li>Fixed issue with new layout YT is rolling out that broke the feed when a Short was included.</li>
   <li>Fixed some issues with the settings page not loading correctly in certain cases.</li>
 </ul>
