--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -97,7 +97,7 @@
       <input id="settings.hide.watched.support.channel" type="checkbox"/>
       <label for="settings.hide.watched.support.channel">Enable extension for channel videos page</label><br/>
       <input id="settings.hide.watched.support.home" type="checkbox"/>
-      <label for="settings.hide.watched.support.home">Enable extension for YouTube&trade; Homepage (beta)</label>
+      <label for="settings.hide.watched.support.home">Enable extension for YouTube&trade; Homepage</label>
     </form>
   </div>
 
