start rewrite of video/feed functionality

--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,27 +22,9 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.17.1?</h2>
+<h2>What's new in version x.x.x?</h2>
 <ul>
-  <li>Fixed issue where YT design update caused the detection of videos and therefore hiding them to break on channel
-    video pages.
-  </li>
-  <li>
-    Thank you everyone for your long patience, as I know you've been wanting a fix since November 🙇‍♂️!
-    <br/>It's been frustrating not being able to
-    get around to this sooner, but on the other hand it really warmed my heart to read so many messages from that many
-    people who enjoy
-    and care about this extension enough that much!
-  </li>
-</ul>
-
-<h2>What's new in version 0.17.0?</h2>
-<ul>
-  <li>Now you can auto-hide (mark as watched) Shorts! This behaviour is off by default, so you'll have to turn it on in
-    the settings page.
-  </li>
-  <li>Fixed issue with new layout YT is rolling out that broke the feed when a Short was included.</li>
-  <li>Fixed some issues with the settings page not loading correctly in certain cases.</li>
+  <li>Removed support for legacy YouTube&trade; (pre-Polymer). Afaik it hasn't been used for a long time.</li>
 </ul>
 
 <h2>Want to help?</h2>
@@ -59,6 +41,18 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.17.1</dt>
+  <dd>Fixed issue where YT design update caused the detection of videos and therefore hiding them to break on channel
+    video pages.
+  </dd>
+
+  <dt>v0.17.0</dt>
+  <dd>Now you can auto-hide (mark as watched) Shorts! This behaviour is off by default, so you'll have to turn it on in
+    the settings page.
+  </dd>
+  <dd>Fixed issue with new layout YT is rolling out that broke the feed when a Short was included.</dd>
+  <dd>Fixed some issues with the settings page not loading correctly in certain cases.</dd>
+
   <dt>v0.16.1</dt>
   <dd>Now you can hide premieres until they are available to watch! Enable this feature in the settings.</dd>
   <dd>Mark as Watched toggle is back. Cause for disappearance was YT changing the name of their toggle element.</dd>
