--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,8 +22,9 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version x.x.x?</h2>
+<h2>What's new in version 0.17.2?</h2>
 <ul>
+  <li>Fixed issue where setting option for using YT's watched state to mark as watched to off was ignored.</li>
   <li>Removed support for legacy YouTube&trade; (pre-Polymer). Afaik it hasn't been used for a long time.</li>
 </ul>
 
