--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,10 +22,9 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.17.2?</h2>
+<h2>What's new in version 0.17.3?</h2>
 <ul>
-  <li>Fixed issue where setting option for using YT's watched state to mark as watched to off was ignored.</li>
-  <li>Removed support for legacy YouTube&trade; (pre-Polymer). Afaik it hasn't been used for a long time.</li>
+  <li>Fixed shorts not being marked as watched automatically upon viewing (if setting is enabled).</li>
 </ul>
 
 <h2>Want to help?</h2>
@@ -42,6 +41,10 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.17.2</dt>
+  <dd>Fixed issue where setting option for using YT's watched state to mark as watched to off was ignored.</dd>
+  <dd>Removed support for legacy YouTube&trade; (pre-Polymer). Afaik it hasn't been used for a long time.</dd>
+
   <dt>v0.17.1</dt>
   <dd>Fixed issue where YT design update caused the detection of videos and therefore hiding them to break on channel
     video pages.
