--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,7 +22,12 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.18.0?</h2>
+<h2>What's new in version 0.19.0?</h2>
+<ul>
+  <li>Sync watch history across devices (using same browser)</li>
+</ul>
+
+<h2>What's new in version 0.18.0? (repeating this here, as 0.18.0 did not get published for Chrome)</h2>
 <ul>
   <li>Enable UI for channel's live video (livestream) history</li>
   <li>Moved forced-grid rules in css to improve performance</li>
@@ -32,7 +37,8 @@
 
 <h2>Contributor thank you</h2>
 <p>
-  I would like to thank <a href="https://github.com/mocanew">Valentin Mocanu</a> for his contributions to the project.
+  Massive kudos to <a href="https://github.com/mocanew">Valentin Mocanu</a> for the tackling the sync storage,
+  which has been on my list to do since the very first version of this extension.
 </p>
 
 <h2>Want to help?</h2>
@@ -49,6 +55,15 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>v0.19.0</dt>
+  <dd>Sync watch history across devices (using same browser)</dd>
+
+  <dt>v0.18.0</dt>
+  <dd>Enable UI for channel's live video (livestream) history</dd>
+  <dd>Moved forced-grid rules in css to improve performance</dd>
+  <dd>Enabled forced grid layout on all page</dd>
+  <dd>Fix: shorts video query catch "Latest YouTube posts" too</dd>
+
   <dt>v0.17.6</dt>
   <dd>Enable UI for channel's live video (livestream) history</dd>
   <dd>Moved forced-grid rules in css to improve performance</dd>
