--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,17 +22,9 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.19.0?</h2>
+<h2>What's new in version 0.19.2?</h2>
 <ul>
-  <li>Sync watch history across devices (using same browser)</li>
-</ul>
-
-<h2>What's new in version 0.18.0? (repeating this here, as 0.18.0 did not get published for Chrome)</h2>
-<ul>
-  <li>Enable UI for channel's live video (livestream) history</li>
-  <li>Moved forced-grid rules in css to improve performance</li>
-  <li>Enabled forced grid layout on all page</li>
-  <li>Fix: shorts video query catch "Latest YouTube posts" too</li>
+  <li>Support YouTube's updated layout</li>
 </ul>
 
 <h2>Contributor thank you</h2>
