add tweak - hide ytd center header

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -84,6 +84,9 @@
       <input id="settings.hide.watched.refresh.rate" type="number"/><br/>
       <label for="settings.hide.watched.refresh.rate">(currently works only in "hide watched" state and when Hiding older videos)</label><br/>
       <br/>
+      <h2>Tweaks</h2>
+      <input id="settings.tweaks" type="checkbox"/>
+      <label for="settings.tweaks">Enable ui tweaks<label><br/>
     </form>
   </div>
 
