--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,9 +22,9 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.19.2?</h2>
+<h2>What's new in version 0.20.0?</h2>
 <ul>
-  <li>Support YouTube's updated layout</li>
+  <li>Support for Chrome's v3 manifest</li>
 </ul>
 
 <h2>Contributor thank you</h2>
@@ -47,6 +47,9 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>0.19.2</dt>
+  <dd>Support YouTube's updated layout</dd>
+
   <dt>v0.19.0</dt>
   <dd>Sync watch history across devices (using same browser)</dd>
 
