--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,9 +22,10 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.20.0?</h2>
+<h2>What's new in version 0.21.0?</h2>
 <ul>
   <li>Support for Chrome's v3 manifest</li>
+  <li>Support for subscription feed list view</li>
 </ul>
 
 <h2>Contributor thank you</h2>
