--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -22,8 +22,9 @@
   installing or updating the extension to a new version.
 </p>
 
-<h2>What's new in version 0.21.0?</h2>
+<h2>What's new in version 0.21.1?</h2>
 <ul>
+  <li>Fix YT's new progress bar not being detected to mark video as watched</li>
   <li>Support for Chrome's v3 manifest</li>
   <li>Support for subscription feed list view</li>
 </ul>
@@ -48,6 +49,15 @@
 
 <h2>Complete changelog</h2>
 <dl>
+  <dt>0.21.1</dt>
+  <dd>Fix YT's new progress bar not being detected to mark video as watched</dd>
+
+  <dt>0.21.0</dt>
+  <dd>Support for subscription feed list view</dd>
+
+  <dt>0.20.0</dt>
+  <dd>Support for Chrome's v3 manifest</dd>
+
   <dt>0.19.2</dt>
   <dd>Support YouTube's updated layout</dd>
 
