Add option to Hide videos without a timestamp

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -78,6 +78,8 @@
         <option value="2 Weeks">2 Weeks</option>
         <option value="1 Month">1 Month</option>
       </select><br/>
+      <input id="settings.hide.without.timestamp" type="checkbox"/>
+      <label for="settings.hide.without.timestamp">Hide videos without timestamp (Has added Benefit of hiding sponsored videos, playlists, and mixes)</label><br/>
       <br/>
 
       <label for="settings.hide.watched.refresh.rate">Refresh rate for feed clearing (milliseconds)</label>
